Add team swagger comments
